--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ padding-left: 20px;
 }
 #dis {
     padding-top:30px;
+    font-size:0.9rem;
+    
 }
 .heading-body{
     display: flex;
@@ -191,6 +193,9 @@ button:hover{
     position: relative;
     animation: bounce 2s infinite;
 }
+a{
+    text-decoration: none;
+}
 
 @keyframes bounce {
     0%{
@@ -229,6 +234,11 @@ button:hover{
     height: 100%;
     object-fit: cover;
 
+}
+.graphics-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: fit;
 }
 
 .mobile-btn{
@@ -272,21 +282,26 @@ button:hover{
 .btn{
     margin-top:90px;
 }
+#grapics-h1{
+    font-size: 2.6rem;
+    line-height: 2.7rem;
+    text-align: center;
+    font-weight: bolder;
+}
 
 
-
-@media (max-width: 1470px){
+@media (max-width: 1740px){
 
   
 
     .heading-body, .main-area{
-        width: 90%;
+        width: 95%;
         margin: auto;
       
 
     }
     .header-area{
-        width: 90%;
+        width: 80%;
     }
 
 }
@@ -297,6 +312,10 @@ button:hover{
         height: 780px;
 
     }
+    .header-area{
+        width: 100%;
+    }
+
 
 }
 @media (max-width: 788px){
@@ -429,6 +448,7 @@ button{
     gap: 10px;
 }
 }
+
 
 
 
